clusters/homelab/apps/opensearch/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opensearch
  namespace: homelab
spec:
  parentRefs:
    - name: internal
      namespace: envoy-gateway-system
  hostnames:
    - opensearch.${cluster_subdomain}
  rules:
    - backendRefs:
        - name: opensearch-master
          port: 9200
