clusters/homelab/apps/opensearch/rm-objects.yaml
$patch: delete
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opensearch
  namespace: homelab
